Fix service list overflow issue

--- a/src/assets/scss/components/_services-list.scss
+++ b/src/assets/scss/components/_services-list.scss
@@ -5,6 +5,7 @@
   @include xy-grid;
   margin: 0;
   list-style: none;
+  overflow: hidden;
 
   .#{$item-class} {
     @include header-sizes(h1);
